@@ -153,7 +153,7 @@ $T=array(
 	'italic' => 'Kursiv',
 	'fontexample' => 'Beispiel für deine gewählte Schrift',
 	'timestamps' => 'Zeitstempel anzeigen',
-	'embed' => 'Bilder einbetten (Benötigt Cookies)',
+	'embed' => 'Bilder einbetten',
 	'incognito' => 'Inkognito Modus',
 	'pbsize' => 'Postboxgröße',
 	'nbsize' => 'Notizboxgröße',
