@@ -153,7 +153,7 @@ $I=array(
 	'italic' => 'Italic',
 	'fontexample' => 'Example for your chosen font',
 	'timestamps' => 'Show Timestamps',
-	'embed' => 'Embed images (needs Cookies)',
+	'embed' => 'Embed images',
 	'incognito' => 'Incognito mode',
 	'pbsize' => 'Post box size',
 	'nbsize' => 'Notes box size',
