@@ -153,7 +153,7 @@ $T=array(
 	'italic' => 'Bastardilla',
 	'fontexample' => 'Ejemplo de la tipografía seleccionada',
 	'timestamps' => 'Mostrar fecha y hora',
-	'embed' => 'Habilitar imágenes (necesita cookies)',
+	'embed' => 'Habilitar imágenes',
 	'incognito' => 'Modo incógnito',
 	'pbsize' => 'Tamaño de la caja de publicación',
 	'nbsize' => 'Tamaño de la caja de notas',
