@@ -153,7 +153,7 @@ $T=array(
 	'italic' => 'Italique',
 	'fontexample' => 'Exemple de choix de polices',
 	'timestamps' => 'Afficher l\'horodatage',
-	'embed' => 'Images imbriquées (besoin des Cookies)',
+	'embed' => 'Images imbriquées',
 	'incognito' => 'Mode incognito',
 	'pbsize' => 'Dimension de la boite du texte',
 	'nbsize' => 'Dimension de la boite du chat',
