@@ -153,7 +153,7 @@ $T=array(
 	'italic' => 'Miring',
 	'fontexample' => 'Contoh untuk font yang anda pilih',
 	'timestamps' => 'Tunjukkan penanda waktu',
-	'embed' => 'Tanamkan gambar (Membutuhkan kuki)',
+	'embed' => 'Tanamkan gambar',
 	'incognito' => 'Mode penyamaran',
 	'pbsize' => 'Ukuran kotak pos',
 	'nbsize' => 'Ukuran otak catatan',
