@@ -153,7 +153,7 @@ $T=array(
 	'italic' => 'Курсив',
 	'fontexample' => 'Пример выбранного вами шрифта',
 	'timestamps' => 'Показать отметки времени',
-	'embed' => 'Вставить изображения (использует Cookies)',
+	'embed' => 'Вставить изображения',
 	'incognito' => 'Режим инкогнито',
 	'pbsize' => 'Размер окна сообщений',
 	'nbsize' => 'Размер окна заметок',
